// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render active 1`] = `
<a
  className="facet search-navigator-facet active"
  data-value="bar"
  href="#"
  onClick={[Function]}
>
  <span
    className="facet-name"
  >
    foo
  </span>
  <span
    className="facet-stat"
  />
</a>
`;

exports[`should render disabled 1`] = `
<span
  className="facet search-navigator-facet"
>
  <span
    className="facet-name"
  >
    foo
  </span>
  <span
    className="facet-stat"
  />
</span>
`;

exports[`should render effort stat 1`] = `
<a
  className="facet search-navigator-facet"
  data-value="bar"
  href="#"
  onClick={[Function]}
>
  <span
    className="facet-name"
  >
    foo
  </span>
  <span
    className="facet-stat"
  >
    work_duration.x_days.3
  </span>
</a>
`;

exports[`should render half width 1`] = `
<a
  className="facet search-navigator-facet search-navigator-facet-half"
  data-value="bar"
  href="#"
  onClick={[Function]}
>
  <span
    className="facet-name"
  >
    foo
  </span>
  <span
    className="facet-stat"
  />
</a>
`;

exports[`should render inactive 1`] = `
<a
  className="facet search-navigator-facet"
  data-value="bar"
  href="#"
  onClick={[Function]}
>
  <span
    className="facet-name"
  >
    foo
  </span>
  <span
    className="facet-stat"
  />
</a>
`;

exports[`should render stat 1`] = `
<a
  className="facet search-navigator-facet"
  data-value="bar"
  href="#"
  onClick={[Function]}
>
  <span
    className="facet-name"
  >
    foo
  </span>
  <span
    className="facet-stat"
  >
    13
  </span>
</a>
`;
